[package]
name = "clock"
description = "A small application for children so they can learn reading analog clock."
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Clock"
identifier = "com.pelc.clock"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["images/**/*.png"]
copyright = "Copyright (c) Václav Pelc. All rights reserved."
category = "Education"
osx_url_schemes = ["com.pelc.clock"]

[dependencies]
druid = "0.8.3"
